--- a/package.json
+++ b/package.json
@@ -1,26 +1,37 @@
 {
-  "name": "demo-next-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.6"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
-  }
+	"name": "dali",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"analyze": "cross-env ANALYZE=true next build"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^3.9.0",
+		"@kinde-oss/kinde-auth-nextjs": "^2.3.8",
+		"mobx": "^6.13.1",
+		"mobx-react-lite": "^4.0.7",
+		"mobx-utils": "^6.0.8",
+		"next": "14.2.6",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.52.2",
+		"zod": "^3.23.8"
+	},
+	"devDependencies": {
+		"@next/bundle-analyzer": "^14.2.7",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"cross-env": "^7.0.3",
+		"eslint": "^8",
+		"eslint-config-next": "14.2.6",
+		"postcss": "^8",
+		"server-only": "^0.0.1",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5"
+	}
 }
